--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -152,6 +152,7 @@ a:focus {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
+    opacity: 0.8;
     -o-background-size: cover;
 }
 
