--- a/font-awesome/css/font-awesome.css
+++ b/font-awesome/css/font-awesome.css
@@ -1670,3 +1670,10 @@
 .fa-meanpath:before {
   content: "\f20c";
 }
+
+/* .butt{
+  text-align :center;
+  color: black;
+  background-color: blueviolet;
+  font-size: small;
+} */
