--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -140,48 +140,20 @@ a:focus {
     }
 }
 
-/* .video_container{
-    background:  bottom center scroll;
-} */
-
 .intro {
-    display:table;
+    display: table;
     width: 100%;
     height: auto;
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    /* background: url(../img/Website\ video\ \(1\).mp4)  */
-     position:  bottom center scroll;
-    background-color: #000; 
-     -webkit-background-size: cover;
+    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+    background-color: #000;
+    -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
-    -o-background-size: cover; 
+    -o-background-size: cover;
 }
-/* .intro {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    color: #fff;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #000;
-  }
-
-  .intro::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('../img/warehouse_video.MP4') center center / cover no-repeat fixed;
-    z-index: -1;
-  } */
 
 .intro .intro-body {
     display: table-cell;
@@ -306,7 +278,6 @@ a:focus {
     height: 200px;
     margin-top: 100px;
 }
-
 
 @media(min-width:767px) {
     .content-section {
